# skydebug

./: CMakeLists.txt  CMakePresets.json  notes.txt
include/libskydebug/: error.hpp  libskydebug.hpp  pipe.hpp  process.hpp
src/: CMakeLists.txt  libskydebug.cpp  pipe.cpp  process.cpp
test/: CMakeLists.txt  tests.cpp
test/targets/: run_endlessly.cpp
tools/: CMakeLists.txt  skydebug.cpp
